<resources>
  <string name="app_name">Components</string>

  <!-- Main Activity -->

  <string name="btnRadioButton">RadioButton</string>
  <string name="btnSpinner">Spinner</string>
  <string name="btnCheckAc">CheckBox</string>
  <string name="btnListView">ListView</string>
  <string name="other">Other</string>


  <!-- RadioButton Activity -->

  <string name="txtN1">First Number</string>
  <string name="txtN2">Second Number</string>

  <string name="rbSum">Sum</string>
  <string name="rbSubt">Subtraction</string>
  <string name="rbMulti">Multiplication</string>
  <string name="rbDiv">Division</string>

  <string name="btnCalculate">Calculate</string>
  <string name="txtResult">Result</string>

  <!-- Spinner Activity -->

  <string-array name="operations">
    <item>Sum</item>
    <item>Subtraction</item>
    <item>Multiplication</item>
    <item>Division</item>
  </string-array>

  <string-array name="planets_array">
    <item>Mercury</item>
    <item>Venus</item>
    <item>Earth</item>
    <item>Mars</item>
    <item>Jupiter</item>
    <item>Saturn</item>
    <item>Uranus</item>
    <item>Neptune</item>
  </string-array>

  <!-- ChechBox Activity -->
  <string name="btnCheck">Selected</string>

  <!-- List View Activity -->
  <string name="etAdd">Enter item name to add in its</string>
  <string name="btnAdd">Add</string>

</resources>
