<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".RadioButtonActivity">

  <EditText
    android:id="@+id/txtN1"
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:layout_marginTop="50dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/txtN1"
    android:inputType="number"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/txtN2"
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:layout_marginTop="50dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/txtN2"
    android:inputType="number"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtN1" />

  <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="300dp"
    android:layout_height="210dp"
    android:layout_marginTop="50dp"
    android:checkedButton="@id/rbSum"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtN2">

    <RadioButton
      android:id="@+id/rbSum"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rbSum" />

    <RadioButton
      android:id="@+id/rbSubt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rbSubt" />

    <RadioButton
      android:id="@+id/rbMulti"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rbMulti" />

    <RadioButton
      android:id="@+id/rbDiv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rbDiv" />
  </RadioGroup>

  <Button
    android:id="@+id/btnCalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:onClick="calculate"
    android:text="@string/btnCalculate"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

  <TextView
    android:id="@+id/txtResult"
    android:layout_width="300dp"
    android:layout_height="55dp"
    android:layout_marginTop="50dp"
    android:gravity="center"
    android:text="@string/txtResult"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>