<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CheckBoxActivity">

  <Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:onClick="calculate"
    android:text="@string/btnCheck"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="50dp"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <CheckBox
      android:id="@+id/checkBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rbMulti" />

    <CheckBox
      android:id="@+id/checkBox2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rbDiv" />

    <CheckBox
      android:id="@+id/checkBox3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rbSubt" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>